--- a/dududu/src/css/fileList.css
+++ b/dududu/src/css/fileList.css
@@ -2,7 +2,7 @@
   margin: 45.3px auto;
   table-layout: fixed;
   border-collapse: collapse;
-  font-family: 'Segoe UI', 'SF Pro Text', sans-serif;
+  font-family: "Microsoft YaHei UI", 'Segoe UI', 'SF Pro Text', sans-serif;
 }
 
 .fileList__header {
